welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: type mismatch;
 found   : Array[Int]
 required: Int
 var occurences = new Array[Int](nums)
                                 ^