welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  
 var occurences = new Array[Int](nums)
 println(occurences(0))
 return false
}